# socket-intents

./: .gitignore  AUTHORS  CHANGES.md  CMakeLists.txt  COPYING  Doxyfile  Makefile  Makefile.am  README.md  addrinfo.c  autogen.sh  config.h.in  configure.ac  intents.conf  mamma-filesize.conf  mamma-rr-naive.conf  mamma-sample.conf  muacc.c  muacc.h  muacsocksd.c
clib/: CMakeLists.txt  client_addrinfo.c  client_addrinfo.h  client_socketapi.c  client_socketapi.h  client_socketconnect.c  client_socketconnect.h  client_socketconnect_async.c  client_socketconnect_async.h  client_socketconnect_emulated.c  client_socketconnect_emulated.h  client_util.c  client_util.h  dlog.h  muacc.c  muacc.h  muacc_client.c  muacc_client.h  muacc_client_util.c  muacc_client_util.h  muacc_ctx.c  muacc_ctx.h  muacc_tlv.c  muacc_tlv.h  muacc_types.h  muacc_util.c  muacc_util.h  strbuf.h  tlv.c  tlv.h
cmake/: FindGLIB2.cmake  FindPCAP.cmake  FindUUID.cmake  Findlex.cmake  Findlibevent.cmake  Findlibnl.cmake  Findliburiparser.cmake  Findyacc.cmake
examples/: CMakeLists.txt
examples/addrinfo_demo/: CMakeLists.txt  addrinfo_demo.c
examples/curl-multi/: CMakeLists.txt  multi-double.c
examples/minimal_examples/: CMakeLists.txt  minimal_examples.c
examples/muacsocks/: CMakeLists.txt  muacsocksd.c
examples/socketconnect_async_demo/: CMakeLists.txt  socketconnect_async_demo.c
examples/synchr_socketconnect_demo/: CMakeLists.txt  synchr_socketconnect_demo.c
lib/: CMakeLists.txt  dlog.c  dlog.h  intents.h  muacc.h  muacc_ctx.c  muacc_ctx.h  muacc_tlv.c  muacc_tlv.h  muacc_util.c  muacc_util.h  socketset.c  socketset.h  strbuf.c  strbuf.h
libintents/: CMakeLists.txt  Makefile  intents.h  libintents.c  libintents.h  testintents.c
mam/: CMakeLists.txt  mam.h  mam_configp.y  mam_configs.l  mam_ctx.c  mam_iface.c  mam_master.c  mam_netlink.c  mam_netlink.h  mam_pmeasure.c  mam_pmeasure.h  mam_util.c  mam_util.h  mptcp_mam_netlink.h  mptcp_netlink_parser.c  mptcp_netlink_parser.h  mptcp_netlink_types.h  policy_intents.c  policy_sample.c  policy_util.c  policy_util.h
mam/example-configs/: intent-category.conf  mamma-sample.conf
mam/policies/: CMakeLists.txt  policy_util.h
monitor/: CMakeLists.txt  netlink_monitor.c
muacsocks/: CMakeLists.txt  muacsocksd.c
policies/: CMakeLists.txt  policy.h  policy_earliest_arrival.c  policy_earliest_arrival.conf  policy_earliest_arrival.h  policy_earliest_arrival_base.c  policy_earliest_arrival_base.h  policy_earliest_arrival_countconns.c  policy_earliest_arrival_free-or-busy.c  policy_earliest_arrival_maxcapacity.c  policy_earliest_arrival_probabilities.c  policy_earliest_arrival_static.c  policy_earliest_arrival_threshold.c  policy_earliest_arrival_util.c  policy_filesize.c  policy_filesize.conf  policy_gpac_test.c  policy_gpac_test.conf  policy_intents.c  policy_mptcp_default_flow.c  policy_mptcp_default_flow.conf  policy_mptcp_default_flow.h  policy_mptcp_filesize.c  policy_mptcp_filesize.conf  policy_mptcp_selective.c  policy_mptcp_simple.c  policy_rr_naive.c  policy_rr_naive.conf  policy_rr_pipelining.c  policy_rr_pipelining.conf  policy_sample.c  policy_sample.conf  policy_util.c  policy_util.h  policy_video.c  threshold_policy.c  threshold_policy.conf
tests/: CMakeLists.txt  addrinfo.c  ifaceinfo.c  libintents.sh  policy_sample.sh  policy_test.sh  test_policy_generic.c  test_policy_sample.c  test_socketconnect.c  test_util.c  test_util.h  testintents.c  testmuacc.c
