cmake_minimum_required(VERSION 2.6)

PROJECT(muacc C)

INCLUDE (CheckIncludeFiles)
INCLUDE (CheckStructHasMember)

ADD_DEFINITIONS(-Os -Wall --std=gnu99 -g3 -Wmissing-declarations)
ADD_DEFINITIONS(-D_GNU_SOURCE)
ADD_DEFINITIONS(-DMUACC_SOCKET="/tmp/muacc")

IF(APPLE)
  INCLUDE_DIRECTORIES(/opt/local/include)
  LINK_DIRECTORIES(/opt/local/lib)
ENDIF()

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(GLIB2 REQUIRED)
FIND_PACKAGE(libevent REQUIRED)
FIND_PACKAGE(lex REQUIRED)
FIND_PACKAGE(yacc REQUIRED)
FIND_PACKAGE(liburiparser REQUIRED)

CHECK_STRUCT_HAS_MEMBER("struct sockaddr" "sa_len" sys/socket.h HAVE_SOCKADDR_LEN)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

ADD_SUBDIRECTORY(clib)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(mam)
ADD_SUBDIRECTORY(policies)
ADD_SUBDIRECTORY(muacsocks)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
SET(CMAKE_CTEST_COMMAND ctest -V)
ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS policytest socketconnecttest)
