
INCLUDE_DIRECTORIES(${GLIB2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBEVENT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${UUID_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

YACC_FILE(mam_configp.y)
LEX_FILE(mam_configs.l)
SET(cleanup_files mam_configp.c mam_configp.output mam_configs.c)
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${cleanup_files}")

ADD_LIBRARY(mam SHARED mam_ctx.c mam_iface.c mam_util.c)
TARGET_LINK_LIBRARIES(mam muacc y ltdl ${LIBEVENT_LIBRARIES} ${GLIB2_LIBRARIES})

ADD_EXECUTABLE(mamma mam mam_configp.c mam_configs.c mam_master.c mam_pmeasure.c)
TARGET_LINK_LIBRARIES(mamma mam uuid ${LIBEVENT_LIBRARIES} ${GLIB2_LIBRARIES})

SET_TARGET_PROPERTIES(mamma
PROPERTIES 	BUILD_WITH_INSTALL_RPATH TRUE
			INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${POLICY_PATH}"
)

SET_TARGET_PROPERTIES(mamma
PROPERTIES 	BUILD_WITH_INSTALL_RPATH TRUE
			INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${POLICY_PATH}"
)

INSTALL(TARGETS mamma
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin
)

INSTALL(TARGETS mam
    LIBRARY DESTINATION lib
)
