INCLUDE_DIRECTORIES(${LIBNL_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	
ADD_EXECUTABLE(mptcp_nlmon netlink_monitor.c ../mam/mptcp_netlink_parser.c)
TARGET_LINK_LIBRARIES(mptcp_nlmon ${LIBNL_LIBRARIES})

INSTALL(TARGETS mptcp_nlmon
    RUNTIME DESTINATION bin
)